[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
reqwest = { version = "0.11.11", features = ["json"] }
thirtyfour = "0.30.0"
tokio = { version = "1.20.1", features = ["full"] }
webbrowser = "0.7.1"
wifi-rs = "0.2.2"
